--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   cloud_firestore: ^0.14.3
   google_sign_in: ^4.5.6
   firebase_core: ^0.5.2
-  barcode_scanner: ^1.0.1
+  qr_flutter: ^3.2.0
+  responsive_builder:
+  get_it:
 
 
   # The following adds the Cupertino Icons font to your application.
