--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   qr_flutter: ^3.2.0
   responsive_builder:
   get_it:
+  flushbar: ^1.10.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,10 +69,51 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito-Regular.ttf
+          weight: 400
+          style: normal
+        - asset: assets/fonts/Nunito-Italic.ttf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/Nunito-Black.ttf
+          weight: 900
+          style: normal
+        - asset: assets/fonts/Nunito-BlackItalic.ttf
+          weight: 900
+          style: italic
+        - asset: assets/fonts/Nunito-Bold.ttf
+          weight: 800
+          style: normal
+        - asset: assets/fonts/Nunito-BoldItalic.ttf
+          weight: 800
+          style: italic
+        # - asset: assets/fonts/Nunito-ExtraBold.ttf
+        #   weight: 900
+        #   style: normal
+        # - asset: assets/fonts/Nunito-ExtraBoldItalic.ttf
+        #   weight: 900
+        #   style: italic
+        - asset: assets/fonts/Nunito-Light.ttf
+          weight: 200
+          style: normal
+        - asset: assets/fonts/Nunito-LightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/Nunito-ExtraLight.ttf
+          weight: 100
+          style: normal
+        - asset: assets/fonts/Nunito-ExtraLightItalic.ttf
+          weight: 100
+          style: italic
+        - asset: assets/fonts/Nunito-SemiBold.ttf
+          weight: 500
+          style: normal
+        - asset: assets/fonts/Nunito-SemiBoldItalic.ttf
+          weight: 500
+          style: italic
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
